--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CutFileWeb.Models.Product
+﻿@using CutFileWeb.ViewModels
+@model ProductViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,37 +12,52 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
+                <label asp-for="@Model.ProductName" class="control-label"></label>
+                <input asp-for="@Model.ProductName" class="form-control" />
+                <span asp-validation-for="@Model.ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductCategoryId" class="control-label"></label>
-                <input asp-for="ProductCategoryId" class="form-control" />
-                <span asp-validation-for="ProductCategoryId" class="text-danger"></span>
+                <label asp-for="@Model.category.CategoryId"></label>
+                <select asp-for="@Model.category.CategoryId" class="form-control">
+                    <option selected="selected" value="0">--Select--</option>
+                    @if (Model.categories != null)
+                    {
+                        @foreach (var parent in Model.categories)
+                        {
+                            <option value="@parent.CategoryId">@parent.CategoryName</option>
+                        }
+                    }
+
+                </select>
+                <span asp-validation-for="@Model.category.CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductPrice" class="control-label"></label>
-                <input asp-for="ProductPrice" class="form-control" />
-                <span asp-validation-for="ProductPrice" class="text-danger"></span>
+                <label asp-for="@Model.ProductPrice" class="control-label"></label>
+                <input asp-for="@Model.ProductPrice" class="form-control" />
+                <span asp-validation-for="@Model.ProductPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductDescription" class="control-label"></label>
-                <input asp-for="ProductDescription" class="form-control" />
-                <span asp-validation-for="ProductDescription" class="text-danger"></span>
+                <label asp-for="@Model.ProductDescription" class="control-label"></label>
+                <input asp-for="@Model.ProductDescription" class="form-control" />
+                <span asp-validation-for="@Model.ProductDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductContentDetail" class="control-label"></label>
-                <input asp-for="ProductContentDetail" class="form-control" />
-                <span asp-validation-for="ProductContentDetail" class="text-danger"></span>
+                <label asp-for="@Model.ProductContentDetail" class="control-label"></label>
+                <textarea asp-for="@Model.ProductContentDetail" class="form-control" ></textarea>
+                <span asp-validation-for="@Model.ProductContentDetail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductImage" class="control-label"></label>
-                <input asp-for="ProductImage" class="form-control" />
+                <input type="file" asp-for="ProductImage" class="form-control" />
                 <span asp-validation-for="ProductImage" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductFile" class="control-label"></label>
+                <input type="file" asp-for="ProductFile" class="form-control" />
+                <span asp-validation-for="ProductFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
