--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.ProductName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductCategoryId)
+            @Html.DisplayNameFor(model => model.CategoryId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductCategoryId)
+            @Html.DisplayFor(model => model.CategoryId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductPrice)
