--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductCategoryId" class="control-label"></label>
-                <input asp-for="ProductCategoryId" class="form-control" />
-                <span asp-validation-for="ProductCategoryId" class="text-danger"></span>
+                <label asp-for="CategoryId" class="control-label"></label>
+                <input asp-for="CategoryId" class="form-control" />
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductPrice" class="control-label"></label>
