--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CutFileWeb.styles.css" asp-append-version="true" />
-    <link href="~/resources/icon/Logo-CFL-Black-300px.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/resources/icon/Logo.ico" rel="shortcut icon" type="image/x-icon" />
 
 
 </head>
@@ -29,7 +29,7 @@
               <div class="card-body p-4 p-lg-5 text-black">
                   <form asp-action="Login">
                       <div class="d-flex align-items-center mb-3 pb-1">
-                          <img src="~/resources/img/Logo-CFL-Black-300px.png" />
+                          <img src="~/resources/img/logo.png" />
                       </div>
 
                       <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
