--- a/Views/Categories/Delete.cshtml
+++ b/Views/Categories/Delete.cshtml
@@ -40,7 +40,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input id="submitButton" type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+
