--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -20,8 +20,8 @@
                 <span asp-validation-for="@Model.ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="@Model.category.CategoryId"></label>
-                <select asp-for="@Model.category.CategoryId" class="form-control">
+                <label asp-for="@Model.CategoryId">Category</label>
+                <select asp-for="@Model.CategoryId" class="form-control">
                     <option selected="selected" value="0">--Select--</option>
                     @if (Model.categories != null)
                     {
@@ -32,7 +32,22 @@
                     }
 
                 </select>
-                <span asp-validation-for="@Model.category.CategoryId" class="text-danger"></span>
+                <span asp-validation-for="@Model.BrandId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.BrandId">Brand</label>
+                <select asp-for="@Model.BrandId" class="form-control">
+                    <option selected="selected" value="0">--Select--</option>
+                    @if (Model.brands != null)
+                    {
+                        @foreach (var parent in Model.brands)
+                        {
+                            <option value="@parent.BrandId">@parent.BrandName</option>
+                        }
+                    }
+
+                </select>
+                <span asp-validation-for="@Model.BrandId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.ProductPrice" class="control-label"></label>
@@ -51,7 +66,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductImage" class="control-label"></label>
-                <input type="file" asp-for="ProductImage" class="form-control" />
+                <input type ="file"  accept="image/png, image/gif, image/jpeg" asp-for="ProductImage" class="form-control" />
                 <span asp-validation-for="ProductImage" class="text-danger"></span>
             </div>
             <div class="form-group">
