--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CutFileWeb.Models.Product
+﻿@model CutFileWeb.ViewModels.ProductEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,40 +10,84 @@
 <h4>Products</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductId" />
+    <div class="col-md-12">
+        <form asp-action="Edit" enctype="multipart/form-data" method="post">
+            <input type="hidden" asp-for="@Model.ProductId" id="CategoryId" />
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
+                <label asp-for="@Model.ProductName" class="control-label"></label>
+                <input asp-for="@Model.ProductName" class="form-control" />
+                <span asp-validation-for="@Model.ProductName" class="text-danger"></span>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="@Model.CategoryId">Category</label>
+                        <select asp-for="@Model.CategoryId" class="form-control">
+                            <option selected="(@Model.CategoryId == 0 || @Model.CategoryId == null) ? 'selected' : ''" value="0">--Select--</option>
+                            @if (Model.categories != null)
+                            {
+                                @foreach (var parent in Model.categories)
+                                {
+                                    <option selected="(@Model.CategoryId == @parent.CategoryId) ? 'selected' : ''" value="@parent.CategoryId">@parent.CategoryName</option>
+                                }
+                            }
+
+                        </select>
+                        <span asp-validation-for="@Model.BrandId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="@Model.BrandId">Brand</label>
+                        <select asp-for="@Model.BrandId" class="form-control">
+                            <option selected="(@Model.BrandId == 0 || @Model.BrandId == null) ? 'selected' : ''" value="0">--Select--</option>
+                            @if (Model.brands != null)
+                            {
+                                @foreach (var parent in Model.brands)
+                                {
+                                    <option selected="(@Model.BrandId == @parent.BrandId) ? 'selected' : ''" value="@parent.BrandId">@parent.BrandName</option>
+                                }
+                            }
+
+                        </select>
+                        <span asp-validation-for="@Model.BrandId" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="@Model.ProductPrice" class="control-label"></label>
+                <input asp-for="@Model.ProductPrice" class="form-control" />
+                <span asp-validation-for="@Model.ProductPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                <label asp-for="@Model.ProductDescription" class="control-label"></label>
+                <input asp-for="@Model.ProductDescription" class="form-control" />
+                <span asp-validation-for="@Model.ProductDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductPrice" class="control-label"></label>
-                <input asp-for="ProductPrice" class="form-control" />
-                <span asp-validation-for="ProductPrice" class="text-danger"></span>
+                <label asp-for="@Model.ProductContentDetail" class="control-label"></label>
+                <textarea asp-for="@Model.ProductContentDetail" class="form-control"></textarea>
+                <span asp-validation-for="@Model.ProductContentDetail" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ProductDescription" class="control-label"></label>
-                <input asp-for="ProductDescription" class="form-control" />
-                <span asp-validation-for="ProductDescription" class="text-danger"></span>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="ProductImage" class="control-label"></label>
+                        <input type="file" accept="image/png, image/gif, image/jpeg" asp-for="ProductImage" class="form-control" />
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="ProductFile" class="control-label"></label>
+                        <input type="file" asp-for="ProductFile" class="form-control" />
+
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProductContentDetail" class="control-label"></label>
-                <input asp-for="ProductContentDetail" class="form-control" />
-                <span asp-validation-for="ProductContentDetail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductImage" class="control-label"></label>
-                <input asp-for="ProductImage" class="form-control" />
-                <span asp-validation-for="ProductImage" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -54,4 +98,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+    CKEDITOR.replace("ProductContentDetail");
+</script>
 
