--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -17,7 +17,7 @@
     <link href="~/resources/admin/dist/css/adminlte.min.css" rel="stylesheet" />
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@2.8.2/dist/alpine.min.js"></script>
-    <link href="~/resources/icon/Logo-CFL-Black-300px.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/resources/icon/Logo.ico" rel="shortcut icon" type="image/x-icon" />
     <script src="~/plugins/ckeditor/ckeditor.js"></script>
 </head>
 <body class="hold-transition sidebar-mini">
@@ -26,7 +26,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/admin" class="brand-link">
-                <img style="width:200px" src="~/resources/img/Logo-CFL-Black-300px.png" />
+                <img style="width:200px" src="~/resources/img/logo.png" />
             </a>
 
             <!-- Sidebar -->
